style.css
*{
    margin: 0;
    padding: 0;
    font-family: 'Poppins', sans-serif;
    box-sizing: border-box;
}
html{
    scroll-behavior: smooth;
}
body{
    background: #080808;
    color: #fff;
}
#header{
    width: 100%;
    height: 100vh;
    background-image: url(images/background.JPEG);
    background-size: cover;
    background-position: center;
    background-attachment: fixed;
}
.container{
    padding: 10px 10%;
}
nav{
    display: flex;
    align-items: center;
    justify-content: space-between;
    flex-wrap: wrap;
}
.logo {
    font-size: 75px;
    font-weight: 700;
    color: #fff;
}
.logo span {
    background: linear-gradient(90deg, #3533cd, #7b79ff);
    -webkit-background-clip: text;
    -webkit-text-fill-color: transparent;
    background-clip: text;
}
nav ul li{
    display: inline-block;
    list-style: none;
    margin: 10px 20px;
}
nav ul li a{
    color: #fff;
    text-decoration: none;
    font-size: 18px;
    position: relative;
}
nav ul li a::after{
    content: '';
    width: 0;
    height: 3px;
    background: linear-gradient(90deg, #3533cd, #7b79ff);
    position: absolute;
    left: 0;
    bottom: -6px;
    transition: 0.5s;
}
nav ul li a:hover::after{
    width: 100%;
}
.header-text{
    margin-top: 20%;
    font-size: 30px;
}
.header-text h1{
    font-size: 60px;
    margin-top: 20px;
}
.header-text h1 span{
    background: linear-gradient(90deg, #3533cd, #7b79ff);
    -webkit-background-clip: text;
    -webkit-text-fill-color: transparent;
    background-clip: text;
}

 /*- - - - - - - About - - - - -  - */

#about{
    padding: 80px 0px;
    color: #ababab;
}
.row{
    display: flex;
    justify-content: space-between;
    flex-wrap: wrap;
    align-items: flex-start;
}
.about-col-1 {
    flex-basis: 35%;
}
.about-col-1 img {
    width: 100%;
    height: 100%;
    object-fit: cover;
    object-position: top;
    border-radius: 10px;
}
.about-col-2 {
    flex-basis: 60%;
}
.sub-title{
    font-size: 60px;
    font-weight: 600;
    color: #fff;
    margin-bottom: 20px;
}
.tab-titles{
    display: flex;
    margin: 30px 0 40px;
}
.tab-links{
    margin-right: 50px;
    font-size: 18px;
    font-weight: 500;
    cursor: pointer;
    position: relative;
}
.tab-links::after{
    content: '';
    width: 0;
    height: 3px;
    background: linear-gradient(90deg, #3533cd, #7b79ff);
    position: absolute;
    left: 0;
    bottom: -8px;
    transition: 0.5s;
}
.tab-links.active-link::after{
    width: 100%;
}
.tab-contents ul li{
    list-style: none;
    margin: 20px 0;
}
.tab-contents ul li span{
    font-size: 14px;
    background: linear-gradient(90deg, #3533cd, #7b79ff);
    -webkit-background-clip: text;
    -webkit-text-fill-color: transparent;
    background-clip: text;
    display: block;
    margin-bottom: 6px;
    margin-top: 10px;
}
.skills-row {
    display: flex;
    gap: 60px;
}
.tab-contents{
    display: none;
}
.tab-contents.active-tab{
    display: block;
}

/* - - - - - - - - - Employment History - - - - - - - - - - */

#Employment-History{
    padding: 30px 0;
}
.employment-history-list{
    display: grid;
    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
    grid-gap: 40px;
    margin-top: 50px;
}
.employment-history-list div {
    background: #1a1a1a;
    border-radius: 10px;
    padding: 40px;
    font-size: 15px;
    font-weight: 300;
    transition: background-color 0.5s, transform 0.5s;
}
.employment-history-list div img {
    width: 100%;
    height: 100px;
    object-fit: contain;
    border-radius: 10px;
}
.employment-history-list div h2{
    font-size: 30px;
    font-weight: 500;
    margin-top: 15px;
    margin-bottom: 15px;
}
.employment-history-list div a{
    text-decoration: none;
    color: #fff;
    font-size: 13px;
    margin-top: 20px;
    display: inline-block;
}
.employment-history-list div:hover {
    background-color: #3533cd;
    transform: translateY(-10px);
}
.employment-history-list div a:hover {
    color: #fff;
}

/* - - - - - - - - - - - - - Technical Projects and Experience - - - - - - - - - - - - - - - - - */

#experience{
    padding: 50px 0;
}
.experience-list{
    display: grid;
    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
    grid-gap: 40px;
    margin-top: 50px;
}
.work{
    border-radius: 10px;
    position: relative;
    overflow: hidden;
    background-color: #1a1a1a;
}
.work img{
    width: 100%;
    height: 250px;
    object-fit: contain; 
    display: block;
    border-radius: 10px;
    padding: 20px;
    transition: transform 0.5s; 
}
.layer{
    width: 100%;
    height: 0;
    background: linear-gradient(rgba(0, 0, 0, 0.6), #3533cd);
    border-radius: 10px;
    position: absolute;
    bottom: 0;
    left: 0;
    overflow: hidden;
    display: flex;
    align-items: center;
    justify-content: center;
    flex-direction: column;
    padding: 0 40px;
    text-align: center;
    font-size: 14px;
    transition: height 0.5s;
}
.layer h3{
    font-weight: 700;
    margin-bottom: 20px;
}
.layer p{
    font-size: 15px;
}
.work:hover img{
    transform: scale(1.1)
}
.work:hover .layer{
    height: 100%;
}
.btn{
    display: block;
    margin: 50px auto;
    width: fit-content;
    border: 1px solid #3533cd;
    padding: 14px 50px;
    border-radius: 6px;
    text-decoration: none;
    color: #fff;
    transition: background-color 0.5s;
}
.btn:hover{
    background-color: #3533cd
}

/* - - - - - - - - - - - - - Contact - - - - - - - - - - - - - - - - */

.contact-left{
    flex-basis: 35%;
}
.contact-right{
    flex-basis: 60%;
}
.contact-left p{
    margin-top: 30px;
}
.contact-left p i{
    color: #3533cd;
    margin-right: 15px;
    font-size: 25px;
}
.social-icons{
    margin-top: 30px;
}
.social-icons a{
    text-decoration: none;
    font-size: 30px;
    margin-right: 15px;
    color: #ababab;
    display: inline-block;
    transition: transform 0.5s;
}
.social-icons a:hover{
    color: #3533cd;
    transform: translateY(-5px);
}
.btn.btn2{
    display: inline-block;
    background: #3533cd;
}
.contact-right form{
    width: 100%;
}
form input, form textarea{
    width: 100%;
    border: 0;
    outline: none;
    background: #262626;
    padding: 15px;
    margin: 15px 0;
    color: #fff;
    font-size: 18px;
    border-radius: 6px;
}
form .btn2{
    padding: 14px 60px;
    font-size: 18px;
    margin-top: 20px;
    cursor: pointer;
}
.footer{
    width: 100%;
    text-align: center;
    padding: 25px 0;
    font-weight: 300;
    margin-top: 20px;
    color: #c6c2c2;
    background-color: #262626;
}

/* - - - - - - - - - - - - CSS for small screens - - - - - - - - - - - - */

nav .fa-solid{
    display: none;
}

@media only screen and (max-width: 600px){
    #header{
        background-image: url(images/phone-background.JPG);
    }   
    .header-text{
        margin-top: 30%;
        font-size: 16px;
    }
    .header-text h1{
        font-size: 30px;
    }
    nav{
        display: flex;
        align-items: center;
        justify-content: space-between;
    }
    .logo{
        font-size: 22px;
    }
    nav .fa-solid{
    display: block;
    font-size: 25px;
    }
    nav ul{
        background: #3533cd;
        position: fixed;
        top: 0;
        right: -200px;
        width: 200px;
        height: 100vh;
        padding-top: 50px;
        z-index: 2;
        transition: right 0.5s;
    }
    nav ul li{
        display: block;
        margin: 25px;
    }
    nav ul .fa-solid{
        position: absolute;
        top: 25px;
        left: 25px;
        cursor: pointer;
    }
    .sub-title{
        font-size: 40px;
    }
    .about-col-1, .about-col-2{
        flex-basis: 100%;
    }
    .about-col-1{
        margin-bottom: 30px;
    }
    .about-col-2{
        font-size: 14px;
    }
    .tab-links{
        font-size: 16px;
        margin-right: 20px;
    }
    .contact-left, .contact-right{
        flex-basis: 100%;
    }
    .footer{
        font-size: 14px;
    }
}

